--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body background="#ef94b6">
+  <%= render 'layouts/navigation'%>
     <%= yield %>
   </body>
 </html>
